Implemented working pagination
