# public/docs/openapi.yaml
@@ -55,22 +55,330 @@ paths:
             example: 1
             nullable: true
       responses:
-        500:
+        200:
           description: ''
           content:
             application/json:
               schema:
                 type: object
                 example:
-                  status: error
-                  message: 'Failed to retrieve characters: Failed to fetch data from Rick and Morty API'
+                  status: success
+                  data:
+                    -
+                      id: 1
+                      name: 'Rick Sanchez'
+                      status: Alive
+                      species: Human
+                      type: ''
+                      gender: Male
+                      origin:
+                        name: 'Earth (C-137)'
+                        url: 'https://rickandmortyapi.com/api/location/1'
+                      location:
+                        name: 'Citadel of Ricks'
+                        url: 'https://rickandmortyapi.com/api/location/3'
+                      image: 'https://rickandmortyapi.com/api/character/avatar/1.jpeg'
+                      episode:
+                        - 'https://rickandmortyapi.com/api/episode/1'
+                        - 'https://rickandmortyapi.com/api/episode/2'
+                        - 'https://rickandmortyapi.com/api/episode/3'
+                        - 'https://rickandmortyapi.com/api/episode/4'
+                        - 'https://rickandmortyapi.com/api/episode/5'
+                        - 'https://rickandmortyapi.com/api/episode/6'
+                        - 'https://rickandmortyapi.com/api/episode/7'
+                        - 'https://rickandmortyapi.com/api/episode/8'
+                        - 'https://rickandmortyapi.com/api/episode/9'
+                        - 'https://rickandmortyapi.com/api/episode/10'
+                        - 'https://rickandmortyapi.com/api/episode/11'
+                        - 'https://rickandmortyapi.com/api/episode/12'
+                        - 'https://rickandmortyapi.com/api/episode/13'
+                        - 'https://rickandmortyapi.com/api/episode/14'
+                        - 'https://rickandmortyapi.com/api/episode/15'
+                        - 'https://rickandmortyapi.com/api/episode/16'
+                        - 'https://rickandmortyapi.com/api/episode/17'
+                        - 'https://rickandmortyapi.com/api/episode/18'
+                        - 'https://rickandmortyapi.com/api/episode/19'
+                        - 'https://rickandmortyapi.com/api/episode/20'
+                        - 'https://rickandmortyapi.com/api/episode/21'
+                        - 'https://rickandmortyapi.com/api/episode/22'
+                        - 'https://rickandmortyapi.com/api/episode/23'
+                        - 'https://rickandmortyapi.com/api/episode/24'
+                        - 'https://rickandmortyapi.com/api/episode/25'
+                        - 'https://rickandmortyapi.com/api/episode/26'
+                        - 'https://rickandmortyapi.com/api/episode/27'
+                        - 'https://rickandmortyapi.com/api/episode/28'
+                        - 'https://rickandmortyapi.com/api/episode/29'
+                        - 'https://rickandmortyapi.com/api/episode/30'
+                        - 'https://rickandmortyapi.com/api/episode/31'
+                        - 'https://rickandmortyapi.com/api/episode/32'
+                        - 'https://rickandmortyapi.com/api/episode/33'
+                        - 'https://rickandmortyapi.com/api/episode/34'
+                        - 'https://rickandmortyapi.com/api/episode/35'
+                        - 'https://rickandmortyapi.com/api/episode/36'
+                        - 'https://rickandmortyapi.com/api/episode/37'
+                        - 'https://rickandmortyapi.com/api/episode/38'
+                        - 'https://rickandmortyapi.com/api/episode/39'
+                        - 'https://rickandmortyapi.com/api/episode/40'
+                        - 'https://rickandmortyapi.com/api/episode/41'
+                        - 'https://rickandmortyapi.com/api/episode/42'
+                        - 'https://rickandmortyapi.com/api/episode/43'
+                        - 'https://rickandmortyapi.com/api/episode/44'
+                        - 'https://rickandmortyapi.com/api/episode/45'
+                        - 'https://rickandmortyapi.com/api/episode/46'
+                        - 'https://rickandmortyapi.com/api/episode/47'
+                        - 'https://rickandmortyapi.com/api/episode/48'
+                        - 'https://rickandmortyapi.com/api/episode/49'
+                        - 'https://rickandmortyapi.com/api/episode/50'
+                        - 'https://rickandmortyapi.com/api/episode/51'
+                      url: 'https://rickandmortyapi.com/api/character/1'
+                      created: '2017-11-04T18:48:46.250Z'
+                    -
+                      id: 631
+                      name: 'Rick Sanchez'
+                      status: Alive
+                      species: Human
+                      type: 'Soulless Puppet'
+                      gender: Male
+                      origin:
+                        name: 'Story Train'
+                        url: 'https://rickandmortyapi.com/api/location/96'
+                      location:
+                        name: 'Story Train'
+                        url: 'https://rickandmortyapi.com/api/location/96'
+                      image: 'https://rickandmortyapi.com/api/character/avatar/631.jpeg'
+                      episode:
+                        - 'https://rickandmortyapi.com/api/episode/37'
+                      url: 'https://rickandmortyapi.com/api/character/631'
+                      created: '2020-08-06T16:39:08.485Z'
+                  message: 'Characters retrieved successfully.'
+                  pagination:
+                    total: 2
+                    pages: 1
+                    next_page: null
+                    prev_page: null
+                    current_page: 1
+                    count: 2
                 properties:
                   status:
                     type: string
-                    example: error
+                    example: success
+                  data:
+                    type: array
+                    example:
+                      -
+                        id: 1
+                        name: 'Rick Sanchez'
+                        status: Alive
+                        species: Human
+                        type: ''
+                        gender: Male
+                        origin:
+                          name: 'Earth (C-137)'
+                          url: 'https://rickandmortyapi.com/api/location/1'
+                        location:
+                          name: 'Citadel of Ricks'
+                          url: 'https://rickandmortyapi.com/api/location/3'
+                        image: 'https://rickandmortyapi.com/api/character/avatar/1.jpeg'
+                        episode:
+                          - 'https://rickandmortyapi.com/api/episode/1'
+                          - 'https://rickandmortyapi.com/api/episode/2'
+                          - 'https://rickandmortyapi.com/api/episode/3'
+                          - 'https://rickandmortyapi.com/api/episode/4'
+                          - 'https://rickandmortyapi.com/api/episode/5'
+                          - 'https://rickandmortyapi.com/api/episode/6'
+                          - 'https://rickandmortyapi.com/api/episode/7'
+                          - 'https://rickandmortyapi.com/api/episode/8'
+                          - 'https://rickandmortyapi.com/api/episode/9'
+                          - 'https://rickandmortyapi.com/api/episode/10'
+                          - 'https://rickandmortyapi.com/api/episode/11'
+                          - 'https://rickandmortyapi.com/api/episode/12'
+                          - 'https://rickandmortyapi.com/api/episode/13'
+                          - 'https://rickandmortyapi.com/api/episode/14'
+                          - 'https://rickandmortyapi.com/api/episode/15'
+                          - 'https://rickandmortyapi.com/api/episode/16'
+                          - 'https://rickandmortyapi.com/api/episode/17'
+                          - 'https://rickandmortyapi.com/api/episode/18'
+                          - 'https://rickandmortyapi.com/api/episode/19'
+                          - 'https://rickandmortyapi.com/api/episode/20'
+                          - 'https://rickandmortyapi.com/api/episode/21'
+                          - 'https://rickandmortyapi.com/api/episode/22'
+                          - 'https://rickandmortyapi.com/api/episode/23'
+                          - 'https://rickandmortyapi.com/api/episode/24'
+                          - 'https://rickandmortyapi.com/api/episode/25'
+                          - 'https://rickandmortyapi.com/api/episode/26'
+                          - 'https://rickandmortyapi.com/api/episode/27'
+                          - 'https://rickandmortyapi.com/api/episode/28'
+                          - 'https://rickandmortyapi.com/api/episode/29'
+                          - 'https://rickandmortyapi.com/api/episode/30'
+                          - 'https://rickandmortyapi.com/api/episode/31'
+                          - 'https://rickandmortyapi.com/api/episode/32'
+                          - 'https://rickandmortyapi.com/api/episode/33'
+                          - 'https://rickandmortyapi.com/api/episode/34'
+                          - 'https://rickandmortyapi.com/api/episode/35'
+                          - 'https://rickandmortyapi.com/api/episode/36'
+                          - 'https://rickandmortyapi.com/api/episode/37'
+                          - 'https://rickandmortyapi.com/api/episode/38'
+                          - 'https://rickandmortyapi.com/api/episode/39'
+                          - 'https://rickandmortyapi.com/api/episode/40'
+                          - 'https://rickandmortyapi.com/api/episode/41'
+                          - 'https://rickandmortyapi.com/api/episode/42'
+                          - 'https://rickandmortyapi.com/api/episode/43'
+                          - 'https://rickandmortyapi.com/api/episode/44'
+                          - 'https://rickandmortyapi.com/api/episode/45'
+                          - 'https://rickandmortyapi.com/api/episode/46'
+                          - 'https://rickandmortyapi.com/api/episode/47'
+                          - 'https://rickandmortyapi.com/api/episode/48'
+                          - 'https://rickandmortyapi.com/api/episode/49'
+                          - 'https://rickandmortyapi.com/api/episode/50'
+                          - 'https://rickandmortyapi.com/api/episode/51'
+                        url: 'https://rickandmortyapi.com/api/character/1'
+                        created: '2017-11-04T18:48:46.250Z'
+                      -
+                        id: 631
+                        name: 'Rick Sanchez'
+                        status: Alive
+                        species: Human
+                        type: 'Soulless Puppet'
+                        gender: Male
+                        origin:
+                          name: 'Story Train'
+                          url: 'https://rickandmortyapi.com/api/location/96'
+                        location:
+                          name: 'Story Train'
+                          url: 'https://rickandmortyapi.com/api/location/96'
+                        image: 'https://rickandmortyapi.com/api/character/avatar/631.jpeg'
+                        episode:
+                          - 'https://rickandmortyapi.com/api/episode/37'
+                        url: 'https://rickandmortyapi.com/api/character/631'
+                        created: '2020-08-06T16:39:08.485Z'
+                    items:
+                      type: object
+                      properties:
+                        id:
+                          type: integer
+                          example: 1
+                        name:
+                          type: string
+                          example: 'Rick Sanchez'
+                        status:
+                          type: string
+                          example: Alive
+                        species:
+                          type: string
+                          example: Human
+                        type:
+                          type: string
+                          example: ''
+                        gender:
+                          type: string
+                          example: Male
+                        origin:
+                          type: object
+                          properties:
+                            name:
+                              type: string
+                              example: 'Earth (C-137)'
+                            url:
+                              type: string
+                              example: 'https://rickandmortyapi.com/api/location/1'
+                        location:
+                          type: object
+                          properties:
+                            name:
+                              type: string
+                              example: 'Citadel of Ricks'
+                            url:
+                              type: string
+                              example: 'https://rickandmortyapi.com/api/location/3'
+                        image:
+                          type: string
+                          example: 'https://rickandmortyapi.com/api/character/avatar/1.jpeg'
+                        episode:
+                          type: array
+                          example:
+                            - 'https://rickandmortyapi.com/api/episode/1'
+                            - 'https://rickandmortyapi.com/api/episode/2'
+                            - 'https://rickandmortyapi.com/api/episode/3'
+                            - 'https://rickandmortyapi.com/api/episode/4'
+                            - 'https://rickandmortyapi.com/api/episode/5'
+                            - 'https://rickandmortyapi.com/api/episode/6'
+                            - 'https://rickandmortyapi.com/api/episode/7'
+                            - 'https://rickandmortyapi.com/api/episode/8'
+                            - 'https://rickandmortyapi.com/api/episode/9'
+                            - 'https://rickandmortyapi.com/api/episode/10'
+                            - 'https://rickandmortyapi.com/api/episode/11'
+                            - 'https://rickandmortyapi.com/api/episode/12'
+                            - 'https://rickandmortyapi.com/api/episode/13'
+                            - 'https://rickandmortyapi.com/api/episode/14'
+                            - 'https://rickandmortyapi.com/api/episode/15'
+                            - 'https://rickandmortyapi.com/api/episode/16'
+                            - 'https://rickandmortyapi.com/api/episode/17'
+                            - 'https://rickandmortyapi.com/api/episode/18'
+                            - 'https://rickandmortyapi.com/api/episode/19'
+                            - 'https://rickandmortyapi.com/api/episode/20'
+                            - 'https://rickandmortyapi.com/api/episode/21'
+                            - 'https://rickandmortyapi.com/api/episode/22'
+                            - 'https://rickandmortyapi.com/api/episode/23'
+                            - 'https://rickandmortyapi.com/api/episode/24'
+                            - 'https://rickandmortyapi.com/api/episode/25'
+                            - 'https://rickandmortyapi.com/api/episode/26'
+                            - 'https://rickandmortyapi.com/api/episode/27'
+                            - 'https://rickandmortyapi.com/api/episode/28'
+                            - 'https://rickandmortyapi.com/api/episode/29'
+                            - 'https://rickandmortyapi.com/api/episode/30'
+                            - 'https://rickandmortyapi.com/api/episode/31'
+                            - 'https://rickandmortyapi.com/api/episode/32'
+                            - 'https://rickandmortyapi.com/api/episode/33'
+                            - 'https://rickandmortyapi.com/api/episode/34'
+                            - 'https://rickandmortyapi.com/api/episode/35'
+                            - 'https://rickandmortyapi.com/api/episode/36'
+                            - 'https://rickandmortyapi.com/api/episode/37'
+                            - 'https://rickandmortyapi.com/api/episode/38'
+                            - 'https://rickandmortyapi.com/api/episode/39'
+                            - 'https://rickandmortyapi.com/api/episode/40'
+                            - 'https://rickandmortyapi.com/api/episode/41'
+                            - 'https://rickandmortyapi.com/api/episode/42'
+                            - 'https://rickandmortyapi.com/api/episode/43'
+                            - 'https://rickandmortyapi.com/api/episode/44'
+                            - 'https://rickandmortyapi.com/api/episode/45'
+                            - 'https://rickandmortyapi.com/api/episode/46'
+                            - 'https://rickandmortyapi.com/api/episode/47'
+                            - 'https://rickandmortyapi.com/api/episode/48'
+                            - 'https://rickandmortyapi.com/api/episode/49'
+                            - 'https://rickandmortyapi.com/api/episode/50'
+                            - 'https://rickandmortyapi.com/api/episode/51'
+                          items:
+                            type: string
+                        url:
+                          type: string
+                          example: 'https://rickandmortyapi.com/api/character/1'
+                        created:
+                          type: string
+                          example: '2017-11-04T18:48:46.250Z'
                   message:
                     type: string
-                    example: 'Failed to retrieve characters: Failed to fetch data from Rick and Morty API'
+                    example: 'Characters retrieved successfully.'
+                  pagination:
+                    type: object
+                    properties:
+                      total:
+                        type: integer
+                        example: 2
+                      pages:
+                        type: integer
+                        example: 1
+                      next_page:
+                        type: string
+                        example: null
+                      prev_page:
+                        type: string
+                        example: null
+                      current_page:
+                        type: integer
+                        example: 1
+                      count:
+                        type: integer
+                        example: 2
       tags:
         - Characters
       security: []
